2011-04-20  Taiju TSUIKI  <tzik@google.com>

        Reviewed by David Levin.

        Add overwrite copy/move tests for FileSystem API
        https://bugs.webkit.org/show_bug.cgi?id=58864

        * fast/filesystem/op-copy-expected.txt:
        * fast/filesystem/op-move-expected.txt:
        * fast/filesystem/resources/op-copy.js:
        * fast/filesystem/resources/op-move.js:

2011-04-20  Tony Chang  <tony@chromium.org>

        Unreviewed, embedding checksums in png files in platform/chromium-linux*.

2011-04-20  Yael Aharon  <yael.aharon@nokia.com>

        Unreviewed.

        Adjust Windows results after r84398.

        * platform/win/fast/borders: Added.
        * platform/win/fast/borders/bidi-012-expected.txt: Added.

2011-04-20  Tony Chang  <tony@chromium.org>

        Unreviewed, embedding checksums in png files in platform/chromium-win*.

2011-04-20  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Eric Seidel.

        Replace bidi-004.html with its new version.
        https://bugs.webkit.org/show_bug.cgi?id=58984

        * fast/borders/bidi-004.html: Removed.
        * fast/borders/bidi-012.html: Added.
        * platform/chromium-linux/fast/borders/bidi-004-expected.png: Removed.
        * platform/chromium-mac-leopard/fast/borders/bidi-004-expected.png: Removed.
        * platform/chromium-win/fast/borders/bidi-004-expected.png: Removed.
        * platform/chromium-win/fast/borders/bidi-004-expected.txt: Removed.
        * platform/gtk/fast/borders/bidi-004-expected.checksum: Removed.
        * platform/gtk/fast/borders/bidi-004-expected.png: Removed.
        * platform/gtk/fast/borders/bidi-004-expected.txt: Removed.
        * platform/mac/fast/borders/bidi-004-expected.checksum: Removed.
        * platform/mac/fast/borders/bidi-004-expected.png: Removed.
        * platform/mac/fast/borders/bidi-004-expected.txt: Removed.
        * platform/mac/fast/borders/bidi-012-expected.checksum: Added.