@@ -10,6 +10,8 @@
 
     function finish()
     {
+        video.pause();
+        video.currentTime = 0;
         if (window.layoutTestController)
             layoutTestController.notifyDone();
     }
