@@ -2910,16 +2910,15 @@ BUGWK53469 GPU MAC : compositing/scroll-painted-composited-content.html = CRASH
 
 BUGCR74979 GPU MAC: media/video-canvas-alpha.html = IMAGE
 
-// These tests rely on the playing event to be fired immediately after play()
-// is called on a video, before the frames start loading.
-BUGCR74982 GPU : media/controls-after-reload.html = IMAGE
-BUGCR74982 GPU : media/controls-strict.html = IMAGE
-BUGCR74982 GPU : media/controls-styling.html = IMAGE
-BUGCR74982 GPU : media/controls-without-preload.html = IMAGE
-BUGCR74982 GPU : media/video-aspect-ratio.html = IMAGE
-BUGCR74982 GPU WIN LINUX : media/video-transformed.html = IMAGE
-BUGCR74982 GPU MAC SNOWLEOPARD : media/video-transformed.html = IMAGE
-BUGCR74982 GPU : media/video-zoom-controls.html = IMAGE
+// Any tests that render controls will need rebaselining after the patch on
+// bug 55918 lands.
+BUGWK55918 : media/controls-after-reload.html = IMAGE
+BUGWK55918 : media/controls-strict.html = IMAGE
+BUGWK55918 : media/controls-styling.html = IMAGE
+BUGWK55918 : media/controls-without-preload.html = IMAGE
+BUGWK55918 : media/video-aspect-ratio.html = IMAGE
+BUGWK55918 : media/video-transformed.html = IMAGE
+BUGWK55918 : media/video-zoom-controls.html = IMAGE
 
 BUGWK55708 BUGCR75345 GPU MAC : media/video-controls-rendering.html = CRASH IMAGE
 BUGWK55718 BUGCR75354 GPU : media/media-document-audio-repaint.html = IMAGE+TEXT
